--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,700&display=swap");
 
 .container {
   padding: 0 8%;
