--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,38 @@
-@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,600&display=swap");
 
 .container {
   padding: 0 8%;
+}
+
+h2 {
+  font-family: "Abril Fatface";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 65px;
+  color: #272d39;
+  margin: 0;
+}
+
+h3 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 49px;
+  color: #272d39;
+}
+
+h4 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+  color: #272d39;
+  margin: 0;
+}
+
+*:focus { 
+  outline: none;
 }
