--- a/src/global.scss
+++ b/src/global.scss
@@ -1,25 +1,29 @@
 @import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,600&display=swap");
 
 .container {
-  padding: 0 8%;
+  padding: 0 4%;
 }
 
 h1 {
   font-family: "Abril Fatface", serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 96px;
-  line-height: 74px;
+  // font-size: ;
+  // line-height: ;
   color: #fff;
   margin-bottom: 0;
+
+  span {
+    line-height: normal;
+  }
 }
 
 h2 {
   font-family: "Abril Fatface";
   font-style: normal;
   font-weight: normal;
-  font-size: 48px;
-  line-height: 65px;
+  // font-size: ;
+  // line-height: ;
   color: #272d39;
   margin: 0;
 }
@@ -28,8 +32,8 @@ h3 {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  font-size: 36px;
-  line-height: 49px;
+  // font-size: ;
+  // line-height: ;
   color: #272d39;
   margin: 0;
 }
@@ -38,12 +42,111 @@ h4 {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 33px;
+  // font-size: ;
+  // line-height: ;
   color: #272d39;
   margin: 0;
 }
 
+p {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #272d39;
+}
+
 *:focus {
   outline: none;
+}
+
+@media (min-width: 800px) {
+  .container {
+    padding: 0 5%;
+  }
+
+  h1 {
+    font-size: 64px;
+    line-height: 48px;
+
+    span {
+      line-height: 100px;
+    }
+  }
+
+  h2 {
+    font-size: 36px;
+    line-height: 49px;
+  }
+
+  h3 {
+    font-size: 32px;
+    line-height: 44px;
+  }
+
+  h4 {
+    font-size: 20px;
+    line-height: 27px;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 25px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    padding: 0 6%;
+  }
+
+  h1 {
+    font-size: 72px;
+    line-height: 54px;
+
+    span {
+      line-height: 120px;
+    }
+  }
+
+  h2 {
+    font-size: 40px;
+    line-height: 54px;
+  }
+
+  h3 {
+    font-size: 36px;
+    line-height: 49px;
+  }
+
+  h4 {
+    font-size: 24px;
+    line-height: 33px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    padding: 0 8%;
+  }
+
+  h1 {
+    font-size: 96px;
+    line-height: 74px;
+
+    span {
+      line-height: 180px;
+    }
+  }
+
+  h2 {
+    font-size: 48px;
+    line-height: 65px;
+  }
+
+  p {
+    font-size: 22px;
+    line-height: 30px;
+  }
 }
