Begins redesign of hero

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:400,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600&display=swap");
 
 .container {
-  padding: 0 4%;
+  padding: 0 8%;
 }
 
 h1 {
@@ -10,12 +10,8 @@ h1 {
   font-weight: normal;
   // font-size: ;
   // line-height: ;
-  color: #fff;
+  color: #272D39;
   margin-bottom: 0;
-
-  span {
-    line-height: normal;
-  }
 }
 
 h2 {
@@ -62,17 +58,9 @@ p {
 }
 
 @media (min-width: 800px) {
-  .container {
-    padding: 0 5%;
-  }
-
   h1 {
-    font-size: 64px;
-    line-height: 48px;
-
-    span {
-      line-height: 100px;
-    }
+    // font-size: ;
+    // line-height: ;
   }
 
   h2 {
@@ -97,17 +85,9 @@ p {
 }
 
 @media (min-width: 1024px) {
-  .container {
-    padding: 0 6%;
-  }
-
   h1 {
-    font-size: 72px;
-    line-height: 54px;
-
-    span {
-      line-height: 120px;
-    }
+    // font-size: ;
+    // line-height: ;
   }
 
   h2 {
@@ -127,17 +107,9 @@ p {
 }
 
 @media (min-width: 1280px) {
-  .container {
-    padding: 0 8%;
-  }
-
   h1 {
     font-size: 96px;
-    line-height: 74px;
-
-    span {
-      line-height: 180px;
-    }
+    line-height: 130px;
   }
 
   h2 {
