--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,10 @@
 
 .container {
   padding: 0 8%;
+
+  @media (min-width: 1280px) {
+    padding: 0 16%;
+  }
 }
 
 h1 {
@@ -10,7 +14,7 @@ h1 {
   font-weight: normal;
   // font-size: ;
   // line-height: ;
-  color: #272D39;
+  color: var(--grayDark);
   margin-bottom: 0;
 }
 
@@ -20,7 +24,7 @@ h2 {
   font-weight: normal;
   // font-size: ;
   // line-height: ;
-  color: #272d39;
+  color: var(--grayDark);
   margin: 0;
 }
 
@@ -30,7 +34,7 @@ h3 {
   font-weight: 600;
   // font-size: ;
   // line-height: ;
-  color: #272d39;
+  color: var(--grayDark);
   margin: 0;
 }
 
@@ -40,7 +44,7 @@ h4 {
   font-weight: 600;
   // font-size: ;
   // line-height: ;
-  color: #272d39;
+  color: var(--gray);
   margin: 0;
 }
 
@@ -50,7 +54,7 @@ p {
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
-  color: #272d39;
+  color: var(--gray);
 }
 
 *:focus {
