--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600&display=swap");
 
 .container {
-  padding: 0 8%;
+  padding: 0 7.5%;
+
+  @media (min-width: 768px) {
+    padding: 0 10%;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 0 12%;
+  }
 
   @media (min-width: 1280px) {
-    padding: 0 16%;
+    padding: 0 15%;
   }
 }
 
@@ -12,18 +20,28 @@ h1 {
   font-family: "Abril Fatface", serif;
   font-style: normal;
   font-weight: normal;
-  // font-size: ;
-  // line-height: ;
+  font-size: 36px;
+  line-height: 49px;
   color: var(--grayDark);
   margin-bottom: 0;
+}
+
+.subheading {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 27px;
+  color: var(--gray);
+  margin: 0;
 }
 
 h2 {
   font-family: "Abril Fatface";
   font-style: normal;
   font-weight: normal;
-  // font-size: ;
-  // line-height: ;
+  font-size: 28px;
+  line-height: 38px;
   color: var(--grayDark);
   margin: 0;
 }
@@ -32,8 +50,8 @@ h3 {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  // font-size: ;
-  // line-height: ;
+  font-size: 22px;
+  line-height: 30px;
   color: var(--grayDark);
   margin: 0;
 }
@@ -42,8 +60,8 @@ h4 {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  // font-size: ;
-  // line-height: ;
+  font-size: 18px;
+  line-height: 25px;
   color: var(--gray);
   margin: 0;
 }
@@ -61,10 +79,15 @@ p {
   outline: none;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 768px) {
   h1 {
-    // font-size: ;
-    // line-height: ;
+    font-size: 64px;
+    line-height: 86px;
+  }
+
+  .subheading {
+    font-size: 28px;
+    line-height: 38px;
   }
 
   h2 {
@@ -81,17 +104,12 @@ p {
     font-size: 20px;
     line-height: 27px;
   }
-
-  p {
-    font-size: 18px;
-    line-height: 25px;
-  }
 }
 
 @media (min-width: 1024px) {
   h1 {
-    // font-size: ;
-    // line-height: ;
+    font-size: 72px;
+    line-height: 97px;
   }
 
   h2 {
@@ -99,14 +117,9 @@ p {
     line-height: 54px;
   }
 
-  h3 {
-    font-size: 36px;
-    line-height: 49px;
-  }
-
-  h4 {
-    font-size: 24px;
-    line-height: 33px;
+  p { 
+    font-size: 18px;
+    line-height: 25px;    
   }
 }
 
@@ -116,13 +129,28 @@ p {
     line-height: 130px;
   }
 
+  .subheading {
+    font-size: 36px;
+    line-height: 49px;    
+  }
+
   h2 {
     font-size: 48px;
     line-height: 65px;
   }
 
+  h3 {
+    font-size: 48px;
+    line-height: 65px;
+  }
+
+  h4 {
+    font-size: 24px;
+    line-height: 33px;    
+  }
+
   p {
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 27px;
   }
 }
