--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito:wght@200;400;600&display=swap');
 
 .container {
   padding: 0 7.5%;
@@ -27,9 +27,9 @@ h1 {
 }
 
 .subheading {
-  font-family: "Open Sans";
+  font-family: "Nunito";
   font-style: normal;
-  font-weight: 300;
+  font-weight: 200;
   font-size: 20px;
   line-height: 27px;
   color: var(--gray);
@@ -42,37 +42,33 @@ h2 {
   font-weight: normal;
   font-size: 28px;
   line-height: 38px;
-  color: var(--grayDark);
   margin: 0;
 }
 
 h3 {
-  font-family: "Open Sans";
+  font-family: "Nunito";
   font-style: normal;
   font-weight: 600;
   font-size: 22px;
   line-height: 30px;
-  color: var(--grayDark);
   margin: 0;
 }
 
 h4 {
-  font-family: "Open Sans";
+  font-family: "Nunito";
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
   line-height: 25px;
-  color: var(--gray);
   margin: 0;
 }
 
 p {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
-  color: var(--gray);
 }
 
 *:focus {
