--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito:wght@200;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito:wght@200;400;600&display=swap");
 
 .container {
   padding: 0 7.5%;
@@ -20,8 +20,8 @@ h1 {
   font-family: "Abril Fatface", serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 36px;
-  line-height: 49px;
+  font-size: 40px;
+  line-height: 54px;
   color: var(--grayDark);
   margin-bottom: 0;
 }
@@ -40,8 +40,8 @@ h2 {
   font-family: "Abril Fatface";
   font-style: normal;
   font-weight: normal;
-  font-size: 28px;
-  line-height: 38px;
+  font-size: 32px;
+  line-height: 39px;
   margin: 0;
 }
 
